--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,8 @@ links:
     url: /about
   - title: Articles
     url: /articles
-  - title: Theme Setup
-    url: /theme-setup
-  - title: Made Mistakes
-    url: http://mademistakes.com
+  - title: Return to phstfc.com
+    url: http://phstfc.com
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
