--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo:             site-logo.png
 disqus_shortname: phstfc
 search:           true
 #Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://blog.phstfc.com
 
 # Owner/author information
 owner:
